# nasa-exoplanets

./: linearregression.ipynb  linearregression.ipynb:Zone.Identifier  main.py  pyproject.toml
