[tool.poetry]
name = "nasa-exoplanets"
version = "0.1.0"
description = ""
authors = ["Aleksandra Balasinska <aleksandrabalasinska8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
pydantic = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
